--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -1,12 +1,10 @@
 .sidebar{
-    background-color: blueviolet;
-    position: fixed;
-    left: 0px;
-    top: 0px;
-    bottom: 0px;
+    background-color: rgb(202, 145, 255);
+   padding: 15px;
     width: 250px;
-    margin-left: 0px;
-    text-align: center  ;
+    height: 750px;
+    text-align: center ;
+    
 }
 .sidebar h3{
     margin-bottom: 30px;
@@ -20,13 +18,13 @@
     color: white;
     text-decoration: none;
     font-size: 20px;
-    -webkit-transition: all .5s ease;
-    -moz-transition: all .5s ease;
-    -o-transition: all .5s ease;
-    -ms-transition: all .5s ease;
-    transition: all .5s ease;
+    -webkit-transition: all .15s ease;
+    -moz-transition: all .15s ease;
+    -o-transition: all .15s ease;
+    -ms-transition: all .15s ease;
+    transition: all .15s ease;
   }
   .sidebar a:hover {
-    font-size: 25px;
-    color: #fffc63;
+    font-size: 22px;
+    color: rgb(101, 0, 195);
   }
