--- a/src/componentsvidhya/Fotter.css
+++ b/src/componentsvidhya/Fotter.css
@@ -2,3 +2,98 @@ ul,li{
     text-decoration: none;
     list-style-type: none;
 }
+/* Footer.css */
+
+#footer {
+    background-color: #333;
+    color: #fff;
+    padding: 40px 0;
+  }
+  
+  .main-footer {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    flex-wrap: wrap;
+  }
+  
+  .logoinfo,
+  .com,
+  .info {
+    flex-basis: 33%;
+    padding: 10px;
+    text-align: center;
+  }
+  
+  .logoinfo h1,
+  .com h1,
+  .info h1 {
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
+  
+  .contact-details {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .contact-details li {
+    margin-bottom: 15px;
+  }
+  
+  .contact-details a {
+    color: #fff;
+    text-decoration: none;
+  }
+  
+  .contact-details i {
+    margin-right: 10px;
+  }
+  
+  .com ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .com li {
+    margin-bottom: 10px;
+  }
+  
+  .com a {
+    color: #fff;
+    text-decoration: none;
+  }
+  
+  .info h1 {
+    margin-top: 0;
+  }
+  
+  .sociallogos {
+    display: flex;
+    justify-content: center;
+  }
+  
+  .logobox a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 24px;
+    margin: 0 10px;
+  }
+  
+  .footer-bottom {
+    text-align: center;
+    margin-top: 20px;
+    color: #ccc;
+  }
+  
+  .footer-bottom a {
+    color: #ccc;
+  }
+  
+  .footer-bottom a:hover {
+    color: #fff;
+    text-decoration: underline;
+  }
+  
